gcc/testsuite/rust/rustc/ui/parser/issues/issue-68091-unicode-ident-after-if_dg.rs
macro_rules! x {
    ($($c:tt)*) => {
        $($c)รถ* {}
// { dg-error "" "" { target *-*-* } .-1 }
    };
}

fn main() {
    x!(if);
}

